# atj-algotrading-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt  upload_dist.py
.github/workflows/: python-publish.yml
atj_algotrading/: __init__.py
src/: __init__.py
src/atj-algotrading/backtester/: __init__.py
src/atj_algotrading/backtester/: __init__.py  backtest_simulator.py
src/atj_algotrading/market_data/: __init__.py
src/atj_algotrading/mt5_trade_utils/: __init__.py
src/atj_algotrading/mt5_webapi_client/: __init__.py
src/atj_algotrading/trading_bot/: __init__.py  mt5_trade_utils.py
src/atj_algotrading/ts_api_client/: __init__.py  ts_api.py  ts_auth_server.py  ts_generate_refresh_token.py
src/tutorial/backtesting/: sample_backtest.ipynb
src/tutorial/trading_bot/: config.py  sample_bollinger_bot.py
tests/: import_test.py
