[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atj-algotrading"
version = "0.0.16"
authors = [
  { name="Khac Tu Nguyen", email="khactu@atj-traders.com" },
]
description = "ATJ Trader's Package for Algo Trading & Backtesting"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "pandas",
  "numpy==1.26.4",
  "plotly",
  "jupyter",
  "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/atj_algotrading"]

[project.urls]
Homepage = "https://github.com/atj-khactu/atj-algotrading-package"
Issues = "https://github.com/atj-khactu/atj-algotrading-package/issues"